Bug 798197 - Ambient notification toolbar buttons are distorted in small icons mode on Windows. r=markh
UltraBlame original commit: 0263db40256b862acbf41d451009073fd550bf78

--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -26940,6 +26940,30 @@ display
 none
 ;
 }
+#
+social
+-
+toolbar
+-
+item
+>
+.
+toolbarbutton
+-
+1
+{
+padding
+:
+5px
+;
+-
+moz
+-
+appearance
+:
+toolbarbutton
+;
+}
 navbarLargeIcons
 >
 #
